Depth choice for "Add Cube" tool is ignored (always uses Surface) #100370

Closed
opened 2022-08-12 10:37:57 +02:00 by Matthew Hinson · 8 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 27.20.100.8681

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-11 17:23, hash: 6161b8dc63
Worked: (unknown)

Short description of error
This issue is basically the opposite of #81951. Back then, Blender always used the 3D Cursor depth for the "Add Cube" tool, even if you selected Surface. Now it always uses Surface, even if you selected 3D Cursor.

Exact steps for others to reproduce the error

  • Load up the default startup scene.
  • Select the "Add Cube" tool.
  • Change the "Depth" setting to "Cursor Plane."
  • Drag out a new cube in the viewport, starting on a side of the default cube.
  • Notice that the new cube is adjacent to the default cube - not clipping through it like we would expect (because the 3D Cursor is at its center).

This affects both the Object Mode and the Edit Mode version of the tool.

Side note about tooltip
The tooltip for the "Cursor Plane" option is arguably incorrect. It says the following:

"Start placement using a point projected onto the orientation axis at the 3D cursor position."

Projecting onto an axis would only allow placement on one particular line, not anywhere in the viewport. In reality, the point is projected onto the plane that's perpendicular to the orientation axis (more specifically, the chosen Plane Axis of the Orientation).

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 27.20.100.8681 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-11 17:23, hash: `6161b8dc63` Worked: (unknown) **Short description of error** This issue is basically the opposite of #81951. Back then, Blender always used the 3D Cursor depth for the "Add Cube" tool, even if you selected Surface. Now it always uses Surface, even if you selected 3D Cursor. **Exact steps for others to reproduce the error** - Load up the default startup scene. - Select the "Add Cube" tool. - Change the "Depth" setting to "Cursor Plane." - Drag out a new cube in the viewport, starting on a side of the default cube. - Notice that the new cube is adjacent to the default cube - not clipping through it like we would expect (because the 3D Cursor is at its center). This affects both the Object Mode and the Edit Mode version of the tool. **Side note about tooltip** The tooltip for the "Cursor Plane" option is arguably incorrect. It says the following: "Start placement using a point projected onto the orientation axis at the 3D cursor position." Projecting onto an axis would only allow placement on one particular line, not anywhere in the viewport. In reality, the point is projected onto the plane that's perpendicular to the orientation axis (more specifically, the chosen Plane Axis of the Orientation).
Author
Member

Added subscriber: @Matthew-Hinson

Added subscriber: @Matthew-Hinson
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Member

Added subscribers: @mano-wii, @ideasman42

Added subscribers: @mano-wii, @ideasman42
Member
CC @mano-wii CC @ideasman42

This issue was referenced by 82fe475f06

This issue was referenced by 82fe475f06b32266d4c7374711b0a2d1498f1488

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-08-12 17:13:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100370
No description provided.